Unique Single Link Fix

--- a/spe_ui_components/templates/singlelink/singlelink.html
+++ b/spe_ui_components/templates/singlelink/singlelink.html
@@ -1,14 +1,37 @@
 {% load cms_tags %}
 
 <style>
-    .btn {
-        background-color: {{ instance.bkg_color }};
-        color: {{ instance.txt_color }};
-        {% if instance.height %}height: {{ instance.height }}px;{% endif %}
-        {% if instance.boxwidth %}width: {{ instance.boxwidth }}px;{% endif %}
+{#    .btn {#}
+{#        background-color: {{ instance.bkg_color }};#}
+{#        color: {{ instance.txt_color }};#}
+{#        {% if instance.height %}height: {{ instance.height }}px;{% endif %}#}
+{#        {% if instance.boxwidth %}width: {{ instance.boxwidth }}px;{% endif %}#}
+{#        border: {{ instance.bordersize }}px solid {{ instance.bordercol }};#}
+{#    {% if instance.txtshadow %}text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);{% endif %}#}
+{#    {% if instance.btnshadow %}box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);{% endif %}#}
+{#        -webkit-border-radius: {{ instance.borderradius }}px !important;#}
+{#         -khtml-border-radius: {{ instance.borderradius }}px !important;#}
+{#           -moz-border-radius: {{ instance.borderradius }}px !important;#}
+{#            -ms-border-radius: {{ instance.borderradius }}px !important;#}
+{#             -o-border-radius: {{ instance.borderradius }}px !important;#}
+{#                border-radius: {{ instance.borderradius }}px !important;#}
+{#    }#}
+{#    .btn:hover {#}
+{#        background-color: {{ instance.hv_bkg_color }};#}
+{#        color: {{ instance.hv_txt_color }};#}
+{#        border-color: {{ instance.hv_bordercol }};#}
+{#    }#}
+
+    #singleLink{{ instance.id }} {
+        background-color:{{ instance.bkg_color }};
+        color:{{ instance.txt_color }};
         border: {{ instance.bordersize }}px solid {{ instance.bordercol }};
-    {% if instance.txtshadow %}text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);{% endif %}
-    {% if instance.btnshadow %}box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);{% endif %}
+        {% if instance.height %}height:{{ instance.height }}px;{% endif %}
+        {% if instance.boxwidth %}width: {{ instance.boxwidth }}px;{% endif %}
+        {% if instance.fontsize %}font-size: {{ instance.fontsize }}px;{% endif %}
+        {% if instance.padding %}padding: {{ instance.padding }}px;{% endif %}
+        {% if instance.txtshadow %}text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);{% endif %}
+        {% if instance.btnshadow %}box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);{% endif %}
         -webkit-border-radius: {{ instance.borderradius }}px !important;
          -khtml-border-radius: {{ instance.borderradius }}px !important;
            -moz-border-radius: {{ instance.borderradius }}px !important;
@@ -16,21 +39,14 @@
              -o-border-radius: {{ instance.borderradius }}px !important;
                 border-radius: {{ instance.borderradius }}px !important;
     }
-    .btn:hover {
+    #singleLink{{ instance.id }}:hover {
         background-color: {{ instance.hv_bkg_color }};
         color: {{ instance.hv_txt_color }};
         border-color: {{ instance.hv_bordercol }};
     }
-    .singleLink {
-        background-color:{{ instance.bkg_color }};
-        color:{{ instance.txt_color }};
-        {% if instance.height %}height:{{ instance.height }}px;{% endif %}
-        {% if instance.fontsize %}font-size: {{ instance.fontsize }}px;{% endif %}
-        {% if instance.padding %}padding: {{ instance.padding }}px;{% endif %}
-    }
 </style>
-
-<a href="{{ instance.get_absolute_url }}" {% if instance.new_window %}target="_blank"{% endif %} class="btn btn-default singleLink" role="button">
+{#btn btn-default singleLink#}
+<a href="{{ instance.get_absolute_url }}" {% if instance.new_window %}target="_blank"{% endif %} class="btn" id="singleLink{{ instance.id }}" role="button">
 {% if instance.iconurl %}<img src="{{ instance.iconurl }}" style="height:{{ instance.iconsize }}px; width:{{ instance.iconsize }}px;"/>{% endif %}
 {% if instance.iconimage.url %}<img src="{{ instance.iconimage.url }}" style="height:{{ instance.iconsize }}px; width:{{ instance.iconsize }}px;"/>{% endif %}
 {% if instance.fontawesome %}{{ instance.fontawesome | safe }}{% endif %} {{ instance.text }}</a>
