--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -4,6 +4,14 @@
 @import 'vars';
 
 
+.horizontal-bar {
+    width: 100%;
+    border-bottom: 2px solid $col-grey-light;
+    margin: 10px 0;
+    padding-right: 20px;
+}
+
+
 /* =================================================================== */
 /* ROWS */
 
