--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -118,6 +118,8 @@ a:hover { text-decoration: none; }
 /* VARIABLES
 ====================================================================== */
 /* Images */
+.horizontal-bar { width: 100%; border-bottom: 2px solid #e1e1e1; margin: 10px 0; padding-right: 20px; }
+
 /* =================================================================== */
 /* ROWS */
 .spacerRow { height: 30px; }
