--- a/mainsite/templates/www_subpage.html
+++ b/mainsite/templates/www_subpage.html
@@ -4,11 +4,20 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+    <style>
+        .padTopBottom {
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+        .content-area div {
+{#            border: 1px solid hotpink;#}
+        }
+    </style>
     <div class="row content-area">
-        <div class="col-sm-8 col-lg-7 col-lg-offset-1 noticeArea">{% placeholder "notice" %}</div>
-        <div class="padTopBottom container-fluid">{% placeholder "Content Area One" %}</div>
-        <div class="padTopBottom container-fluid">{% placeholder "Content Area Two" %}</div>
-        <div class="padTopBottom container-fluid">{% placeholder "Content Area Three" %}</div>
+        <div class="col-sm-8 col-lg-7 col-lg-offset-1 noticeArea hide_if_empty">{% placeholder "notice" %}</div>
+        <div class="padTopBottom container-fluid hide_if_empty">{% placeholder "Content Area One" %}</div>
+        <div class="padTopBottom container-fluid hide_if_empty">{% placeholder "Content Area Two" %}</div>
+        <div class="padTopBottom container-fluid hide_if_empty">{% placeholder "Content Area Three" %}</div>
     </div>
 
     {% include 'z_boostrap_size_indicator.html' %}
