img responsive fix.

--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -96,7 +96,7 @@
                 $('.carouselTicker').carouselTicker();
 
                 $(".tile-white img").addClass("img-responsive");
-                $(".tile-white img").removeClass("img-responsive");
+{#                $(".tile-white img").removeClass("img-responsive");#}
             });
         </script>
     {% endblock wrap_end %}
