External Image Visible fix

--- a/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
@@ -5,7 +5,7 @@
         <!-- Indicators -->
         <ol class="carousel-indicators">
           {% for item in items %}
-              {% if item.image and item.image.url and item.isvisible %}
+              {% if item.isvisible %}
                   {% if forloop.first %}
                       <li data-target="#jumboCarousel{{ instance.id }}" data-slide-to="0" data-interval="5000" class="active"></li>
                   {% else %}
@@ -18,7 +18,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox" style="height: {{ instance.pluginheight }}px">
           {% for item in items %}
-              {% if item.image and item.image.url and item.isvisible %}
+              {% if item.isvisible %}
                   {% if forloop.first %}
 
                       <div class="item active" style="background-image: url({{ item.get_image_url }});
