--- a/spe_events/templates/spe_events/plugins/image_items/ii_itemThumb.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_itemThumb.html
@@ -1,7 +1,7 @@
 <!-- This is the Item Thumbnail template. -->
 
 {% for item in items %}
-    {% if item.image and item.image.url and item.isvisible and forloop.first %}
+    {% if item.isvisible and forloop.first %}
         <a href="{{ item.get_absolute_url }}" {% if item.new_window %}target="_blank"{% endif %}><div class="col-xs-12 padZero singleImage" style="
                 background-image: url({{ item.get_image_url }}); background-position:{{ item.imageposition }};
                 background-size: cover; height: {{ instance.pluginheight }}px;"></div></a>
