--- a/spe_events/templates/spe_events/plugins/image_items/ii_jumbotron.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_jumbotron.html
@@ -2,7 +2,7 @@
 <!-- This is the JumboTron template. -->
 
 {% for item in items %}
-    {% if item.image and item.image.url and item.isvisible %}
+    {% if item.isvisible %}
         <a href="{{ item.get_absolute_url }}" {% if item.new_window %}target="_blank"{% endif %}><div class="col-xs-12 padZero jumbotron" style="
                 background-image: url({{ item.get_image_url }}); background-position:{{ item.imageposition }};
                 background-size: cover; height: {{ instance.pluginheight }}px;"></div></a>
