Single links fixes & removed in-template img-responsive

--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -95,7 +95,7 @@
             $(document).ready(function() {
                 $('.carouselTicker').carouselTicker();
 
-                $(".tile-white img").addClass("img-responsive");
+{#                $(".tile-white img").addClass("img-responsive");#}
 {#                $(".tile-white img").removeClass("img-responsive");#}
             });
         </script>
