Removing relative patted yamm.xml reference

--- a/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
+++ b/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
@@ -1,6 +1,6 @@
-<head>
-    <link href="css/yamm.css" rel="stylesheet">
-</head>
+{#<head>#}
+{#    <link href="css/yamm.css" rel="stylesheet">#}
+{#</head>#}
 
 <nav class="yamm navbar hidden-xs" role="navigation">
     <div class="container-fluid">
