conveyor back out

--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" media="all" href="{% static 'atce/css/mainstyle.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'animate/carouselticker/carouselTicker.css' %}" media="screen">
 
-{#        <script src="{% static 'animate/carouselticker/jquery.carouselTicker.js' %}" type="text/javascript"></script>#}
+        <script src="{% static 'animate/carouselticker/jquery.carouselTicker.js' %}" type="text/javascript"></script>
 
     {% endblock css_base %}
 
