added TH styling to custom tables

--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -278,6 +278,10 @@ $itemboxpadding:  20px;
     border:               1px solid $col-grey-light;
     padding:              10px;
   }
+  th {
+    background-color:     $col-grey-light;
+  }
+
 }
 
 
