Footer LInks, Single link bold & centered options

--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -61,11 +61,11 @@
                 <h3>Get In Touch</h3>
                 <h4><i class="fa fa-phone-square" aria-hidden="true"></i> 1.972.952.9393 <i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:service@spe.org">service@spe.org</a></h4>
                 <h4 class="footerSocials">
-                    <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/spemembers"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                    <a href="http://www.linkedin.com/groups/Society-Petroleum-Engineers-57660/about"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/SPEtweets"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                    <a href="https://www.youtube.com/user/2012SPE"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/spengineers/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </h4>
                 <span>facebook like & follow Twitter</span>
                 <p>&nbsp;</p>
