--- a/spe_events/static/iptc/css/_mixins.scss
+++ b/spe_events/static/iptc/css/_mixins.scss
@@ -415,3 +415,21 @@
 @mixin animation($str) {
   @include css3-prefix('animation', $str);
 }
+
+// @include aspect-ratio(16, 9);
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+  > .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
