--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -19,12 +19,6 @@
   height: 30px;
 }
 
-.sponsorBar {
-  padding:                20px 0;
-  border-top:             2px solid $col-grey-light;
-  border-bottom:          2px solid $col-grey-light;
-}
-
 
 .byTheNumbersBar {
   background-color:       $col-atce-green;
@@ -243,6 +237,50 @@ $itemboxpadding:  20px;
   font-size:              $h4size;
 }
 
+
+/* =================================================================== */
+/* SPONSOR ROW & BAR */
+.sponsorBar {
+  padding:                20px 0;
+  border-top:             2px solid $col-grey-light;
+  border-bottom:          2px solid $col-grey-light;
+}
+.carouselTicker__list{
+    margin: 10px 0;
+    padding: 0;
+    list-style-type: none;
+    overflow: hidden;
+}
+
+.carouselTicker__item{
+    margin: 0 0 0 100px;
+    float: left;
+    /*border: 1px solid pink;*/
+    width: 200px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+}
+
+.carouselTicker__loader{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+#carouselTicker .carouselTicker__item {
+    width: 200px;
+    height: 100px;
+    line-height: 100px;
+}
+
+.carouselTicker__item img {
+    vertical-align: top;
+    width: 200px;
+    height: 100px;
+}
 .sponsorCoveyor {
   padding:                20px 0;
 }
